// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Card > render match snapshot 1 1`] = `
<div>
  <div
    class="card"
  >
    <img
      alt="testTitle1"
      class="item-image"
      src="https://fakestoreapi.com/img/61U7T1koQqL._AC_SX679_.jpg"
    />
    <h3
      class="title"
    >
      testTitle1
    </h3>
    <div>
      <div
        class="add-container"
      >
        <label
          for="0"
        >
          Quantity :
        </label>
        <button
          class="left-arrow-input"
        >
          <svg
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <title>
              menu-left
            </title>
            <path
              d="M14,7L9,12L14,17V7Z"
            />
          </svg>
        </button>
        <input
          id="0"
          inputmode="numeric"
          name="quantity"
          type="text"
          value="2"
        />
        <button
          class="right-arrow-input"
        >
          <svg
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <title>
              menu-right
            </title>
            <path
              d="M10,17L15,12L10,7V17Z"
            />
          </svg>
        </button>
        <button
          class="add-button"
        >
          test1
        </button>
      </div>
      <p
        class="price"
      >
        2
         unit x 
        5.5
        € =
         
        11
         €
      </p>
    </div>
  </div>
</div>
`;

exports[`Card > render match snapshot 2 1`] = `
<div>
  <div
    class="card"
  >
    <img
      alt="testTitle2"
      class="item-image"
      src="https://fakestoreapi.com/img/71kWymZ+c+L._AC_SX679_.jpg"
    />
    <h3
      class="title"
    >
      testTitle2
    </h3>
    <div>
      <div
        class="add-container"
      >
        <label
          for="1"
        >
          Quantity :
        </label>
        <button
          class="left-arrow-input"
        >
          <svg
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <title>
              menu-left
            </title>
            <path
              d="M14,7L9,12L14,17V7Z"
            />
          </svg>
        </button>
        <input
          id="1"
          inputmode="numeric"
          name="quantity"
          type="text"
          value="4"
        />
        <button
          class="right-arrow-input"
        >
          <svg
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <title>
              menu-right
            </title>
            <path
              d="M10,17L15,12L10,7V17Z"
            />
          </svg>
        </button>
        <button
          class="add-button"
        >
          test2
        </button>
      </div>
      <p
        class="price"
      >
        4
         unit x 
        10
        € =
         
        40
         €
      </p>
    </div>
  </div>
</div>
`;
